[gd_scene load_steps=18 format=3 uid="uid://bybxmub7542mv"]

[ext_resource type="Script" uid="uid://b5vdqobwnnmgs" path="res://Scene/House/house_inerier.gd" id="1_7fjua"]
[ext_resource type="Texture2D" uid="uid://1xwjrtf85nye" path="res://Sprites/House/house_inerier.png" id="1_12qwt"]
[ext_resource type="Texture2D" uid="uid://c2hb1s238ill1" path="res://Sprites/House/house_wall.png" id="2_7fjua"]
[ext_resource type="PackedScene" uid="uid://y58mpkq8hns3" path="res://Scene/Item/Fireplace/fireplace.tscn" id="4_e82l5"]
[ext_resource type="PackedScene" uid="uid://cutvrayql5u4f" path="res://Scene/Item/Chair/chair.tscn" id="4_sn3a2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e82l5"]
size = Vector2(83.75, 177.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su0op"]
size = Vector2(40, 177.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1uwtg"]
size = Vector2(146.25, 495)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgevv"]
size = Vector2(23.7499, 99.3751)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdfd6"]
size = Vector2(23.7499, 255.938)

[sub_resource type="Animation" id="Animation_e82l5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HouseWall:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7fjua"]
resource_name = "visible_wall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HouseWall:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sn3a2"]
_data = {
&"RESET": SubResource("Animation_e82l5"),
&"visible_wall": SubResource("Animation_7fjua")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12qwt"]
size = Vector2(133, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fjua"]
size = Vector2(347.5, 130)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7fjua"]
blend_mode = 1
light_mode = 1

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_e82l5"]
polygon = PackedVector2Array(-143, 171, -161, 165, -163, 146, -139, 131, -134, 113, -139, 87, -128, 68, -133, 46, -133, 35, -145, 16, -147, -3, 234, 0, 242, 59, 243, 69, 257, 86, 247, 118, 246, 133, 245, 146, 235, 155, 226, 158, 225, 167, 209, 174, 183, 176, 162, 177, 144, 186, 129, 186, 112, 177, 93, 178, 75, 182, 65, 186)

[node name="HouseInerier" type="Node2D"]
script = ExtResource("1_7fjua")

[node name="HouseInerier" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_12qwt")

[node name="Items" type="Node2D" parent="."]

[node name="Fireplace" parent="Items" instance=ExtResource("4_e82l5")]
position = Vector2(144, 113)
scale = Vector2(0.2, 0.2)

[node name="Chair" parent="Items" instance=ExtResource("4_sn3a2")]
position = Vector2(27, 132)
scale = Vector2(-0.7, 0.7)

[node name="Walls_house" type="StaticBody2D" parent="."]
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls_house"]
position = Vector2(-186.875, 121.25)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_e82l5")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls_house"]
position = Vector2(248.75, 123.75)
shape = SubResource("RectangleShape2D_su0op")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls_house"]
position = Vector2(18.7498, 69.375)
rotation = 1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_1uwtg")

[node name="HouseWall" type="Sprite2D" parent="Walls_house"]
texture = ExtResource("2_7fjua")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls_house"]
position = Vector2(-180.937, 208.125)
rotation = 1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_lgevv")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Walls_house"]
position = Vector2(140.469, 208.125)
rotation = 1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_rdfd6")

[node name="Animation_wall" type="AnimationPlayer" parent="Walls_house"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_sn3a2")
}

[node name="Area_player" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_player"]
position = Vector2(-42.5, 113)
shape = SubResource("RectangleShape2D_12qwt")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area_player"]
position = Vector2(16.25, 96)
shape = SubResource("RectangleShape2D_7fjua")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
material = SubResource("CanvasItemMaterial_7fjua")
position = Vector2(-41, -2)
occluder = SubResource("OccluderPolygon2D_e82l5")

[connection signal="body_entered" from="Area_player" to="." method="_on_area_player_body_entered"]
[connection signal="body_exited" from="Area_player" to="." method="_on_area_player_body_exited"]
